--- a/src/Notebooks/TMBD Api.ipynb
+++ b/src/Notebooks/TMBD Api.ipynb
@@ -635,7 +635,7 @@
    ],
    "source": [
     "len(r.json()['results'])\n",
-    "#Con esto vemos cuanros resultados hay por página"
+    "#Con esto vemos cuantos resultados hay por página"
    ]
   },
   {
@@ -696,7 +696,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Ahora vamos a crear un bucle while para obtener la información de las 30 primeras páginas\n",
+    "#Ahora vamos a crear un bucle while para obtener la información de las 50 primeras páginas\n",
     "i = 1\n",
     "serie_id = []\n",
     "name = []\n",
