--- a/src/Notebooks/Cleaning.ipynb
+++ b/src/Notebooks/Cleaning.ipynb
@@ -1484,6 +1484,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "films.reset_index(drop=True, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "films.to_csv('../Data/clean_films.csv')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1492,7 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1523,6 +1541,9 @@
        "      <th>popularity</th>\n",
        "      <th>vote_average</th>\n",
        "      <th>vote_count</th>\n",
+       "      <th>num_episodes</th>\n",
+       "      <th>episode_duration</th>\n",
+       "      <th>first_air_date</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1532,71 +1553,93 @@
        "      <td>Tagesschau</td>\n",
        "      <td>[10763]</td>\n",
        "      <td>['DE']</td>\n",
-       "      <td>3183.847</td>\n",
+       "      <td>3358.953</td>\n",
        "      <td>7.5</td>\n",
-       "      <td>145</td>\n",
+       "      <td>147</td>\n",
+       "      <td>20839</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>1952-12-26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>215103</td>\n",
-       "      <td>Teri Meri Doriyaann</td>\n",
-       "      <td>[18, 10751]</td>\n",
-       "      <td>['IN']</td>\n",
-       "      <td>3103.841</td>\n",
-       "      <td>7.2</td>\n",
-       "      <td>110</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
        "      <td>215803</td>\n",
        "      <td>Batang Quiapo</td>\n",
        "      <td>[10759, 35, 18]</td>\n",
        "      <td>['PH']</td>\n",
-       "      <td>3072.452</td>\n",
+       "      <td>3120.676</td>\n",
        "      <td>7.0</td>\n",
        "      <td>99</td>\n",
+       "      <td>178</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2023-02-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>61818</td>\n",
+       "      <td>Late Night with Seth Meyers</td>\n",
+       "      <td>[10767]</td>\n",
+       "      <td>['US']</td>\n",
+       "      <td>3029.982</td>\n",
+       "      <td>5.4</td>\n",
+       "      <td>50</td>\n",
+       "      <td>1428</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>2014-02-25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>215315</td>\n",
-       "      <td>Rabb Se Hai Dua</td>\n",
-       "      <td>[18]</td>\n",
-       "      <td>['IN']</td>\n",
-       "      <td>3061.452</td>\n",
-       "      <td>6.7</td>\n",
-       "      <td>90</td>\n",
+       "      <td>23915</td>\n",
+       "      <td>Markus Lanz</td>\n",
+       "      <td>[10767]</td>\n",
+       "      <td>['DE']</td>\n",
+       "      <td>2571.402</td>\n",
+       "      <td>5.8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1844</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2008-06-03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>215902</td>\n",
-       "      <td>Katha Ankahee</td>\n",
-       "      <td>[18, 10751, 10766]</td>\n",
-       "      <td>['IN']</td>\n",
-       "      <td>2986.341</td>\n",
-       "      <td>7.5</td>\n",
-       "      <td>106</td>\n",
+       "      <td>63770</td>\n",
+       "      <td>The Late Show with Stephen Colbert</td>\n",
+       "      <td>[35, 10767]</td>\n",
+       "      <td>['US']</td>\n",
+       "      <td>3506.913</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>205</td>\n",
+       "      <td>1419</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>2015-09-08</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   serie_id                 name            genre_id origin_country  \\\n",
-       "0     94722           Tagesschau             [10763]         ['DE']   \n",
-       "1    215103  Teri Meri Doriyaann         [18, 10751]         ['IN']   \n",
-       "2    215803        Batang Quiapo     [10759, 35, 18]         ['PH']   \n",
-       "3    215315      Rabb Se Hai Dua                [18]         ['IN']   \n",
-       "4    215902        Katha Ankahee  [18, 10751, 10766]         ['IN']   \n",
+       "   serie_id                                name         genre_id  \\\n",
+       "0     94722                          Tagesschau          [10763]   \n",
+       "1    215803                       Batang Quiapo  [10759, 35, 18]   \n",
+       "2     61818         Late Night with Seth Meyers          [10767]   \n",
+       "3     23915                         Markus Lanz          [10767]   \n",
+       "4     63770  The Late Show with Stephen Colbert      [35, 10767]   \n",
        "\n",
-       "   popularity  vote_average  vote_count  \n",
-       "0    3183.847           7.5         145  \n",
-       "1    3103.841           7.2         110  \n",
-       "2    3072.452           7.0          99  \n",
-       "3    3061.452           6.7          90  \n",
-       "4    2986.341           7.5         106  "
+       "  origin_country  popularity  vote_average  vote_count  num_episodes  \\\n",
+       "0         ['DE']    3358.953           7.5         147         20839   \n",
+       "1         ['PH']    3120.676           7.0          99           178   \n",
+       "2         ['US']    3029.982           5.4          50          1428   \n",
+       "3         ['DE']    2571.402           5.8           5          1844   \n",
+       "4         ['US']    3506.913           6.5         205          1419   \n",
+       "\n",
+       "   episode_duration first_air_date  \n",
+       "0              15.0     1952-12-26  \n",
+       "1               NaN     2023-02-13  \n",
+       "2              45.0     2014-02-25  \n",
+       "3               NaN     2008-06-03  \n",
+       "4              41.0     2015-09-08  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1607,7 +1650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1615,19 +1658,22 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 1980 entries, 0 to 1979\n",
-      "Data columns (total 7 columns):\n",
-      " #   Column          Non-Null Count  Dtype  \n",
-      "---  ------          --------------  -----  \n",
-      " 0   serie_id        1980 non-null   int64  \n",
-      " 1   name            1980 non-null   object \n",
-      " 2   genre_id        1980 non-null   object \n",
-      " 3   origin_country  1980 non-null   object \n",
-      " 4   popularity      1980 non-null   float64\n",
-      " 5   vote_average    1980 non-null   float64\n",
-      " 6   vote_count      1980 non-null   int64  \n",
-      "dtypes: float64(2), int64(2), object(3)\n",
-      "memory usage: 123.8+ KB\n"
+      "Int64Index: 3980 entries, 0 to 3979\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   serie_id          3980 non-null   int64  \n",
+      " 1   name              3980 non-null   object \n",
+      " 2   genre_id          3980 non-null   object \n",
+      " 3   origin_country    3980 non-null   object \n",
+      " 4   popularity        3980 non-null   float64\n",
+      " 5   vote_average      3980 non-null   float64\n",
+      " 6   vote_count        3980 non-null   int64  \n",
+      " 7   num_episodes      3980 non-null   int64  \n",
+      " 8   episode_duration  3396 non-null   float64\n",
+      " 9   first_air_date    3963 non-null   object \n",
+      "dtypes: float64(3), int64(3), object(4)\n",
+      "memory usage: 342.0+ KB\n"
      ]
     }
    ],
@@ -1637,7 +1683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1704,7 +1750,7 @@
        "4  80      Crime"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1715,7 +1761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1736,6 +1782,123 @@
    ],
    "source": [
     "genre_series.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Vamos a borrar registros con valores nulos y registros duplicados\n",
+    "\n",
+    "series.drop_duplicates(inplace=True)\n",
+    "series.dropna(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jimea\\AppData\\Roaming\\Python\\Python37\\site-packages\\ipykernel_launcher.py:2: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
+      "  \n"
+     ]
+    }
+   ],
+   "source": [
+    "#La columna género_id de cada DF es una lista, vamos a quedarnos con el primer género como si fuese el género principal\n",
+    "series ['genre_id'] = series['genre_id'].str.replace('[','').str.replace(']', '').str.split(',').str[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Borramos las filas donde no hay registro de género\n",
+    "series = series[~(series['genre_id'] == '')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#unimos los géneros al df principal utilizando merge, primero pasando la columna de id a int\n",
+    "series['genre_id'] = series['genre_id'].astype(int)\n",
+    "series = pd.merge(series,genre_series, left_on= 'genre_id', right_on= 'id')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jimea\\AppData\\Roaming\\Python\\Python37\\site-packages\\ipykernel_launcher.py:3: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
+      "  This is separate from the ipykernel package so we can avoid doing imports until\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Nos quedamos con el primer país como país principal y quitamos el formato lista y eliminamos registros vacíos\n",
+    "\n",
+    "series['origin_country'] = series['origin_country'].str.replace('[','').str.replace(']', '').str.replace(\"'\", '').str.split(',').str[0]\n",
+    "series = series[~(series['origin_country'] == '')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Redondeamos la popularidad a un número entero\n",
+    "series['popularity'] = round(series['popularity'])\n",
+    "series['popularity'] = series['popularity'].astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Convertimos la columna first_air_date a formato fecha y creamos la columna mes y año\n",
+    "series['first_air_date'] = pd.to_datetime(series['first_air_date'])\n",
+    "series['release_year'] = series['first_air_date'].dt.year\n",
+    "series['release_month'] = series['first_air_date'].dt.month_name()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Por último, borramos las columnas de id de género y reseteamos el índice\n",
+    "series.drop(columns=['genre_id', 'id'], inplace=True)\n",
+    "series.reset_index(drop=True, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Lo guardamos en otro DF\n",
+    "series.to_csv('../Data/clean_series.csv')"
    ]
   }
  ],
