adding correlation coefficient

--- a/src/Notebooks/Analysis_and_Visualizations.ipynb
+++ b/src/Notebooks/Analysis_and_Visualizations.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
        "4        August  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
        "4          2019       January  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
        "Name: film_id, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
        "0           7.2         956  28  Action          2023        August  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +741,7 @@
        "3900  Documentary          2023     September  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -784,6 +784,66 @@
     "\n",
     "# Mostrar el gráfico\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>popularity</th>\n",
+       "      <th>vote_average</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>popularity</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.064844</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vote_average</th>\n",
+       "      <td>0.064844</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              popularity  vote_average\n",
+       "popularity      1.000000      0.064844\n",
+       "vote_average    0.064844      1.000000"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "films[['popularity', 'vote_average']].corr()"
    ]
   },
   {
