remove unnecessary libraries

--- a/src/Notebooks/Analysis_and_Visualizations.ipynb
+++ b/src/Notebooks/Analysis_and_Visualizations.ipynb
@@ -15,8 +15,7 @@
    "source": [
     "#Importamos librerías\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
